# sphinxcontrib-jsmath

./: .flake8  .gitignore  .travis.yml  CHANGES  CHANGES.rst  Makefile  README.rst  babel.cfg  pyproject.toml  release-checklist.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: create-release.yml  test.yml  transifex.yml
sphinxcontrib/: __init__.py
sphinxcontrib/jsmath/: __init__.py  version.py
sphinxcontrib/jsmath/locales/: jsmath.pot  sphinxcontrib.jsmath.pot
sphinxcontrib/jsmath/locales/.tx/: config
sphinxcontrib/jsmath/locales/ar/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/bn/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/ca/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/cak/LC_MESSAGES/: sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/cs/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/cy/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/da/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/de/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/el/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/eo/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/es/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/et/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/eu/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/fa/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/fi/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/fr/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/he/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
sphinxcontrib/jsmath/locales/hi/LC_MESSAGES/: jsmath.po  sphinxcontrib.jsmath.mo  sphinxcontrib.jsmath.po
tests/: conftest.py  test_jsmath.py
tests/roots/test-basic/: index.rst  math.rst
tests/roots/test-nomath/: conf.py  index.rst
(+95 files in other folders)
