[egg_info]
tag_build = .dev
tag_date = true

[aliases]
release = egg_info -Db ''

[extract_messages]
output_file = sphinxcontrib/jsmath/locales/sphinxcontrib.jsmath.pot
keywords = _ __

[compile_catalog]
domain = sphinxcontrib.jsmath
directory = sphinxcontrib/jsmath/locales/

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 95
ignore = E116,E241,E251
exclude = .git,.tox,.venv

[mypy]
ignore_missing_imports = True
